--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
+.slick-dots li {
+  width: 11px !important;
+  height: 11px !important;
+}
 .slick-dots li button:before {
-  font-size: 24px;
-  color: #0f405a !important;
+  font-size: 11px;
+  color: #ffff !important;
+  width: 11px !important;
+  height: 11px !important;
 }
 
-@media (max-width: 1024px) {
-  .slick-dots li button:before {
-    font-size: 18px;
-  }
-}
-
-/* For mobile devices */
-@media (max-width: 768px) {
-  .slick-dots li button:before {
-    font-size: 16px;
-  }
+.slick-dots li button {
+  padding: 0 !important;
+  width: 11px !important;
+  height: 11px !important;
 }
