--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.slick-dots li {
+/* .slick-dots li {
   width: 11px !important;
   height: 11px !important;
 }
@@ -13,4 +13,4 @@
   padding: 0 !important;
   width: 11px !important;
   height: 11px !important;
-}
+} */
